# fprime-stm32h7-zephyr-reference

./: .gitignore  .gitmodules  CMakeLists.txt  nucleo_h723zg.overlay  prj.conf  requirements.txt  run-gds.sh
Components/Led/: Led.hpp
ReferenceDeployment/: CMakeLists.txt  Main.cpp
ReferenceDeployment/Top/: CMakeLists.txt  ReferenceDeploymentTopology.cpp  ReferenceDeploymentTopology.hpp  ReferenceDeploymentTopologyDefs.hpp  instances.fpp  topology.fpp
config/: CMakeLists.txt  CommandDispatcherImplCfg.hpp  FpConfig.h  PrmDbImplCfg.hpp  TlmChanImplCfg.hpp
config/AcConstants/: AcConstants.fpp  CMakeLists.txt
config/FileHandlingConfig/: CMakeLists.txt  FileHandlingConfig.fpp
config/FpConstants/: CMakeLists.txt  FpConstants.fpp
config/PlatformCfg/: CMakeLists.txt  PlatformCfg.fpp
git_patches/: README.md  mcuboot.patch  zephyr.patch
lib/zephyr-workspace/.west/: config
lib/zephyr-workspace/boards/st/stm32h753i_eval/: stm32h753i_eval.dts
